--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
 
-	<title>Rambox</title>
+	<title>Rambox CE</title>
 
 	<!-- The line below must be kept intact for Sencha Cmd to build your application -->
 	<script id="microloader" type="text/javascript" src="bootstrap.js"></script>
@@ -20,23 +20,6 @@
 		})(document, "script");
 	</script>
 	<!--- Localization -->
-
-	<!--- Signalayer player -->
-	<script type='text/javascript'>
-		window.Signalayer||function(t,e){var o={
-			url:"https://cdn.signalayer.com/static/player.js",
-			key:"sEF8shc4KSuqtHMx0ztmTFdcrQO0cAVpszZ9Y8hLfQ2",
-			async:true
-		};window.Signalayer={cs:[],_apiKey:o.key};for(
-		var r=["identify","goal","updateUserData","start","stop","refresh","show","hide","on"],
-		i={},n=0;n>r.length;n++){var a=r[n];i[a]=function(t){return function(){var
-		e=Array.prototype.slice.call(arguments);
-		window.Signalayer.cs.push({method:t,args:e})}}(a)}window.Signalayer.API=i;var
-		n=t.createElement(e),s=t.getElementsByTagName(e)[0];
-		n.type="text/javascript",
-		n.async=o.async,s.parentNode.insertBefore(n,s),n.src=o.url}(document,"script");
-	</script>
-	<!--- Signalayer player -->
 </head>
 
 <body>
