--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
 
-	<title>Rambox CE</title>
+	<title>LibreRambox</title>
 
 	<!-- The line below must be kept intact for Sencha Cmd to build your application -->
 	<script id="microloader" type="text/javascript" src="bootstrap.js"></script>
