--- a/masterpassword.html
+++ b/masterpassword.html
@@ -41,7 +41,7 @@
 		return doValidate({ keyCode: 13 }, document.getElementsByTagName('input')[0].value);
 	}
 	function exit() {
-		require('electron').remote.app.quit();
+		require('@electron/remote').app.quit();
 	}
 	</script>
 </body>
