Renamed to LibreRambox
renaming

renaming

renaming

--- a/masterpassword.html
+++ b/masterpassword.html
@@ -4,7 +4,7 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
-	<title>Rambox</title>
+	<title>LibreRambox</title>
 </head>
 <body>
 	<div style="background-image: url(resources/Icon.png);background-size:200px;width:200px;height:200px;position:relative;left:50%;margin-left:-100px;margin-top:100px;"></div>
